--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
