--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   pinput: ^5.0.0
   flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
