--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   dio: ^5.4.3+1
+  adaptive_theme: ^3.6.0
 
 dev_dependencies:
   flutter_test:
